// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolvePagePaddings Should keep other styles untouched 1`] = `
{
  "children": [
    {
      "style": {
        "color": "red",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should leave numeric paddingBottom as it is 1`] = `
{
  "children": [
    {
      "style": {
        "paddingBottom": 50,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should leave numeric paddingLeft as it is 1`] = `
{
  "children": [
    {
      "style": {
        "paddingLeft": 50,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should leave numeric paddingRight as it is 1`] = `
{
  "children": [
    {
      "style": {
        "paddingRight": 50,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should leave numeric paddingTop as it is 1`] = `
{
  "children": [
    {
      "style": {
        "paddingTop": 50,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should resolve percent paddingBottom 1`] = `
{
  "children": [
    {
      "style": {
        "height": 200,
        "paddingBottom": 20,
        "width": 100,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should resolve percent paddingLeft 1`] = `
{
  "children": [
    {
      "style": {
        "height": 200,
        "paddingLeft": 10,
        "width": 100,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should resolve percent paddingRight 1`] = `
{
  "children": [
    {
      "style": {
        "height": 200,
        "paddingRight": 10,
        "width": 100,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should resolve percent paddingTop 1`] = `
{
  "children": [
    {
      "style": {
        "height": 200,
        "paddingTop": 20,
        "width": 100,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePagePaddings Should resolve several pages 1`] = `
{
  "children": [
    {
      "style": {
        "height": 200,
        "paddingTop": 10,
        "width": 100,
      },
      "type": "PAGE",
    },
    {
      "style": {
        "height": 200,
        "paddingBottom": 20,
        "width": 100,
      },
      "type": "PAGE",
    },
    {
      "style": {
        "height": 200,
        "paddingLeft": 10,
        "paddingRight": 10,
        "width": 100,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
